--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ button {
 }
 
 .text {
-    font-size: 30px; /* Example font size for the text, adjust as needed */
+    font-size: 24px; /* Example font size for the text, adjust as needed */
 }
 
 .area-of-expertise {
@@ -167,7 +167,7 @@ button {
 }
 
 .area-of-expertise p {
-    font-size: small;
+    font-size: medium;
 }
 
 .statistics {
