--- a/style.css
+++ b/style.css
@@ -478,7 +478,9 @@ button {
     border-radius: 20px;
     padding: 10px;
     text-align: left;
-}
+} 
+
+
 
 .icon {
     margin-right: 10px; /* Add some space between the icon and the text */
@@ -557,6 +559,11 @@ button {
 .category.active {
     background-color: #FF6B6B;
     color: white;
+}
+
+
+.h3-header-text-main{
+    background-color: #FF6B6B;
 }
 
 /* For screens larger than 1600px */
